clean before start impl enum